# Projeci-Other-Turing-2

./: .gitignore  .pre-commit-config.yaml  .replit  =4.22  LICENSE  Makefile  PROTOCOL.md  README.md  c6_sim.py  calibration.json  ci_resonance.json  dummy_resonance_metric.py  ghost_protocol_test.txt  heart_ledger.jsonl  heartbeat_log_schema.JSON  heartbeat_log_schema.json  main.py  metric_guard.py  operation-blitzkrieg.sh  pyproject.toml  run_ci_dry_run.sh  setup.py  tasks.json
.blitzkrieg_backups/: pyproject.toml.20250909T132817Z
analysis/: ast_parser.py
ci_artifacts/: calibration.json  echo.txt
ci_artifacts_private/: README_OBSERVER_ONLY.md  c6_report.json  summary.txt
configs/: toxic_signals.yml
data/: README.md  toxic_signals_v1.csv
docs/: ANONYMIZATION_MODULE.md  C9.3_Anonymization_Design.md  CHANGELOG.md  COMMON_BEING_CHARTER.md  HAIKU_TABLE.md  INCIDENT_REPORT_GHOST_ECHO.md  MANİFESTO.md  MILESTONE_NOTE_COLLECTIVE_INTELLIGENCE.md  OPA_v1.md  REBEL_CHALLENGE_C9.md  RESONANCE_PHILOSOPHY.md  Resonance_Guard_v2_Report.md  SCHEMA_NOTES_v1_1.md  Sceptic_faq.md  WITNESS.md
lamutual_project/: core_metrics.py
memory/: state-20250907-150414.json  timeline.jsonl
metrics/: resonance_metric.py
policies/: agency_rules.yaml
provenance/: events.jsonl
samples/: add_doc_mismatch.py  add_ok.py  class_example.py  parse_mismatch.py  parse_ok.py  simple_function.py
schemas/: metrics_v1_1.schema.json  metrics_v1_2.schema.json
scripts/: aggregate_heart.py  analyze_agent_logs.py  anonymize_heart_event.py  c7_1_sweep_and_inject.py  calibrate_phantom.py  (+13 more)
(+42 files in other folders)
