[tool.poetry]
name = "lamutual_project"
version = "0.1.0"
description = "Λmutual code-meaning resonance engine"
authors = ["Kaptan <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pyyaml = "^6.0.2"
jsonschema = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
